--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,7 @@ backports.weakref==1.0.post1
 beautifulsoup4==4.8.0
 bitarray==1.0.1
 bkcharts==0.2
-bleach==3.1.0
+#bleach==3.1.0
 bokeh==1.3.4
 boto==2.49.0
 Bottleneck==1.2.1
@@ -146,9 +146,9 @@ pycairo==1.18.2
 pycodestyle==2.5.0
 pycosat==0.6.3
 pycparser==2.19
-pycrypto==2.6.1
+#pycrypto==2.6.1
 pycurl==7.43.0.3
--e git+https://github.com/kalemaria/pycurv@d334b10293f7faca2714aae7c10016311dee3ad7#egg=pycurv
+#-e git+https://github.com/kalemaria/pycurv@7fe45f5487676a6f23b38598dfd82727fec3211d#egg=pycurv
 pyflakes==2.1.1
 Pygments==2.4.2
 PyGObject==3.30.5
