--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ cffi==1.12.3
 chardet==3.0.4
 Click==7.0
 cloudpickle==1.2.2
-clyent==1.2.2
+#clyent==1.2.2
 colorama==0.4.1
 conda==4.7.12
 conda-build==3.18.9
