--- a/requirements.txt
+++ b/requirements.txt
@@ -29,9 +29,9 @@ cloudpickle==1.2.2
 #clyent==1.2.2
 colorama==0.4.1
 #conda==4.7.12
-conda-build==3.18.9
-conda-package-handling==1.6.0
-conda-verify==3.4.2
+#conda-build==3.18.9
+#conda-package-handling==1.6.0
+#conda-verify==3.4.2
 contextlib2==0.6.0
 cryptography==2.7
 cycler==0.10.0
