--- a/requirements.txt
+++ b/requirements.txt
@@ -103,7 +103,7 @@ mpmath==1.1.0
 msgpack==0.6.1
 multipledispatch==0.6.0
 multiprocess==0.70.9
-navigator-updater==0.2.1
+#navigator-updater==0.2.1
 nbconvert==5.6.0
 nbformat==4.4.0
 networkx==2.3
