--- a/requirements.txt
+++ b/requirements.txt
@@ -53,7 +53,7 @@ fsspec==0.5.2
 future==0.17.1
 gevent==1.4.0
 glob2==0.7
-gmpy2==2.0.8
+#gmpy2==2.0.8
 greenlet==0.4.15
 h5py==2.9.0
 HeapDict==1.0.1
