--- a/requirements_setup.txt
+++ b/requirements_setup.txt
@@ -7,15 +7,15 @@ sphinxcontrib-napoleon==0.7
 sphinxcontrib-qthelp==1.0.2
 sphinxcontrib-serializinghtml==1.1.3
 sphinxcontrib-websupport==1.1.2
-numpy
-scipy
-scikit-image
-pandas
-pytest
-matplotlib
-pathlib
-vtk
-nibabel
-pathos
-networkx
-future
+numpy==1.17.2
+scipy==1.3.1
+scikit-image==0.15.0
+pandas==0.25.1
+pytest==5.0.1
+matplotlib==3.1.1
+pathlib==1.0.1
+vtk==8.1.2
+nibabel==3.0.0rc1
+pathos==0.2.5
+networkx==2.3
+future==0.17.1
