--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,5 @@ pycurv_testing/test_distances_calculation_output/*
 pycurv_scripts/filter_output.sh
 experimental_data_sets/Golgi_and_vesicles/*/intermediate_files
 experimental_data_sets/Golgi_and_vesicles/*/regions_files
+experimental_data_sets/Golgi_and_vesicles/Vesicles/whole_seg/
 experimental_data_sets/plotting_organelles_curvature/.ipynb_checkpoints
